--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>App Archive</title>
+  <title>My App Archive</title>
   <link href="style.css" rel="stylesheet" />
   <link rel="icon" href="favicon.ico">
 </head>
@@ -20,16 +20,10 @@
       </div>
     </header>
 
-    <section class="app-grid">
-      <h2>Frequently Used Apps</h2>
+    <section>
+      <h2>📦 MS Office</h2>
       <ul>
-        <li><a href="vscode://">VS Code</a></li>
-        <li><a href="terminal://">Terminal</a></li>
-        <li><a href="#">Chrome</a></li>
-        <li><a href="#">Notion</a></li>
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">Spotify</a></li>
-        <!-- add more -->
+        <li><a href="Office/" download>Office Setup</a></li>
       </ul>
     </section>
 
