--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h2>📦 MS Office</h2>
       <ul>
-        <li><a href="Office/" download>Office Setup</a></li>
+        <li><a href="Office/" download>office 16 proplus32.zip</a></li>
       </ul>
     </section>
 
